k8s/manifests/insights/collector/istio/authn/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: insights-collector
spec:
  mtls:
    mode: STRICT
