k8s/manifests/insights/collector/istio/authn/destination-rules.yaml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: insights-collector
spec:
  host: "*.insights-collector.svc.cluster.local"   # scoped to this namespace's services
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
